--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
     {
       "directory": "./memo-front",
       "changeProcessCWD": true,
-    }
+    },
+    {
+      "directory": "./memo-back",
+      "changeProcessCWD": true,
+    },
   ]
 }
